[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Tutorial/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Scene/Vorratsschrank/Vorratsschrank.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Arbeitsplatte/Arbeitsplatte.tscn" type="PackedScene" id=3]

[node name="Tutorial" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Vorratsschrank" parent="." index="0" instance=ExtResource( 2 )]

[node name="Arbeitsplatte" parent="." index="1" instance=ExtResource( 3 )]

[node name="Opening" type="AcceptDialog" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 505.0
margin_top = 263.0
margin_right = 824.0
margin_bottom = 355.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Willkommen zum Tutorial!"
resizable = false
dialog_text = "In diesem Tutorial erlernen Sie die Bedienung
die für das Spiel nötig ist. Bitte befolgen Sie die
Anweisungen. Wir wünschen Ihnen viel Spaß!"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_1" type="AcceptDialog" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 487.0
margin_top = 149.0
margin_right = 830.0
margin_bottom = 428.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Pipette_und_Spitze"
resizable = false
dialog_text = "Zu aller erst lernen Sie das Aufheben/Ablegen
einer Pipette und das Anlegen/Entfernen der
Spitzen. Eine Pipette kann mit Linksklick auf-
gehoben werden und mit Rechtsklick wieder
auf das Rack abgelegt werden. Die jeweiligen
Spitzen können bei angehobener Pipette durch
Linksklick auf den jeweiligen Spitzenbehälter
angelegt werden, mit Rechtsklick auf die Mülltonne
wird die Spitze entfernt. Es können auch volle
Spitzen (gefüllt mit Flüssigkeit) in der Mülltonne
entsorgt werden. Nehmen Sie nun Die 10er
Pipette legen Sie eine Spitze an entfernen Sie
diese im Mülleimer und legen die Pipette wieder
zurück auf die Pipettenablage."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_2" type="AcceptDialog" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 866.0
margin_top = 335.0
margin_right = 1147.0
margin_bottom = 495.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Tubes"
resizable = false
dialog_text = "Als nächstes entnehmen Sie aus der
Tubevorratbox mit Linksklick ein Tube
und entfernen dieses durch Rechtsklick
auf die Mülltonne. Anschließend ent-
nehmen Sie ein weiteres Tube und legen 
diesen im Tuberack in die Kavität, in der 
linken oberen Ecke."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_3" type="AcceptDialog" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 764.0
margin_top = 308.0
margin_right = 1163.0
margin_bottom = 621.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Flüssigkeit"
resizable = false
dialog_text = "Um Flüssigkeiten in ein Tube zu füllen müssen Sie 
die Pipette angehoben haben und die dazu gehörige 
Spitze muss angelegt sein. Nun stellen Sie mit dem
Mausrad das Pipettenvolumen auf 10. Anschließend 
klicken sie mit der Linkenmaustaste auf eines der 
Flüssigkeiten um Flüssigkeit aufzunehmen. Die Volumen-
anzeige färbt sich GRÜN, wenn die Pipette voll ist. Nun 
entleeren Sie den Inhalt, in dem Sie auf das Tube im 
Rack Linksklicken.
Hinweis: Wenn ein Teil der Flüssigkeit noch immer in 
der Pipette ist da nicht alles entleert werden konnte 
färbt sich die Volumenanzeige ROT.
Hinweis: Beim Scrollen und gleichzeitigem halten der 
CTRL-Taste verändert sich die Volumenanzeige in 10er 
Schritten und bei halten der SHIFT-Taste in 100er Schritten. 
"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_4" type="AcceptDialog" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_top = 221.0
margin_right = 472.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Mikrotiterplatte"
resizable = false
dialog_text = "Flüssigkeit kann nicht nur in Tubes
entleert werden, sonder auch in
die Kavitäten der Mikrotiterplatte.
Füllen Sie nun in die Kavität oben
links in der Ecke 10 uL einer beliebigen
Flüssigkeit. Sie können hierfür auch
die Flüssigkeit aus dem Tube nehmen."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_5" type="AcceptDialog" parent="." index="7"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 339.0
margin_top = 180.0
margin_right = 661.0
margin_bottom = 323.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Rotation"
resizable = false
dialog_text = "Durch Linksklick können Sie die Mikrotiterplatte
und das Tuberack anheben und mit Rechtsklick
wieder ablegen. Sie sollen nun das Tuberack
aufheben und durch betätigen der R-Taste
diese um 180° rotieren und wieder ablegen. 
(2x R-Taste drücken)"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[node name="Task_6" type="AcceptDialog" parent="." index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 159.0
margin_right = 390.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
window_title = "Vorratsschrank"
resizable = false
dialog_text = "Das war die Einführung zur Arbeitsplatte,
jetzt wird es eine kleine Einführung zum
Vorratsschrank geben. Das Spiel beginnt
beim Vorratsschrank, hier wählen Sie die
Stoffe aus, in dem Sie auf die Behälter
mit der Linkenmaustaste klicken. Unten
Wählen Sie auch die Mikrotitterplatte
aus. Mit dieser kurzen Einführung endet
das Tutorial. Wir bedanken uns für die
Teilnahme und wünschen Ihnen noch
viel Spaß im weiteren Verlauf des Spiels.
Sie können das Tutorial über das Menü
unten links verlassen."
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog" ]

[connection signal="draw" from="." to="." method="_on_Tutorial_draw"]

[connection signal="tree_exiting" from="." to="." method="_on_Tutorial_tree_exiting"]


